--- a/wp-content/themes/trek-travel-theme/src/scss/_buttons.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_buttons.scss
@@ -184,3 +184,9 @@
 .btn-sm {
   @include button-size($btn-padding-y-sm, $btn-padding-x-sm, $btn-font-size-sm, $btn-border-radius-sm);
 }
+
+.button-border-after {
+  &:after {
+    content: "|";
+  }
+}
