Click the read more buttons on the Itinerary page before print (#16)
* Fixed Itinerary link
https://app.asana.com/0/1205472772784381/1205783492833571/f

* Added JS that closes the chat bot if opened and then print the itinerary

* Added if check to prevent opening chatbot if closed

* Experimenting with JS code to prevent cases where the chabot appears after clicking the print button

* Added JS logic that gets all read more buttons and click them before printing the itinerary

* Added checks for the colapse buttons on mobile

* Print page - each day on new page

* Remove the empty page

---------

Co-authored-by: Polina Todorova <polina@grind.bg>

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -14354,6 +14354,14 @@ nav .nav-tabs .nav-link.active {
     max-width: 100%;
   }
 }
+@media print {
+  .itinerary-details .accordion-item {
+    page-break-after: always;
+  }
+  .itinerary-details .accordion-item:last-child {
+    page-break-after: auto;
+  }
+}
 
 @media (max-width: 767.98px) {
   .pdp-weather__weather-table {
