--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-itinerary.scss
@@ -301,4 +301,12 @@
         }
 
     }
+    @media print {
+        .accordion-item {
+            page-break-after: always;
+            &:last-child {
+                page-break-after: auto;
+           }
+        }
+    }
 }
