--- a/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_forms.scss
@@ -461,6 +461,7 @@ input[type="password"]::-ms-reveal, input[type="password"]::-ms-clear {
                     padding: 18px 0;
                     justify-content: center;
                     align-content: space-between;
+                    overflow: scroll;
                     // align-content: center;
                 }
 
