--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-similar-trips.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-similar-trips.scss
@@ -1,21 +1,57 @@
 #similar-trips {
-    padding: 3rem 0 3rem 2rem;
+    padding: 3rem 0px 3.5rem 82px;
+
+    @media screen and (max-width: 991px) {
+        padding: 3rem 0 3.5rem 2rem;
+    }
+
     
+    .pdp_similar_trips_slider {
+        height: fit-content;
+        // padding: 0rem 21px;
+
+        @media screen and (max-width: 768px) {
+           padding: 0;
+        }
+    }
+
     .col-12 {
         padding-right: unset;
     }
 
+    .similar-trips-title {
+        margin-bottom: 53px !important;
+        @media screen and (min-width: 1640px) {
+            padding-left: 10px;
+        }
+        @media screen and (max-width: 768px) {
+            margin-bottom: 2rem !important;
+            padding: 0;
+            font-family: Poppins;
+            font-size: 24px;
+            line-height: 36px;
+        }
+    }
+
     div.product {
+        margin: 0 10px;
         border: unset;
-        @include media-breakpoint-down(lg) {
-            padding-right: 12px;
+        // @include media-breakpoint-down(lg) {
+        //     padding-right: 12px;
+        // }
+
+        @media screen and (max-width: 768px) {
+            margin: 0 6px;
         }
         a{
             text-decoration: none !important;
+            display: block;
+            width: 100%;
         }        
         img {
-            width: 90%;
-            height: 220px;
+            // width: 90%;
+            width: 100%;
+            height: 270px;
             border-bottom: 4px solid #28AAE1;
             border-radius: 4px;
             object-fit: cover;
@@ -24,9 +60,19 @@
             font-family: 'Poppins';
             font-style: normal;
             font-weight: 600;
+            // font-size: 30px;
+            // line-height: 40px;
+            // margin-top: 2rem;
             font-size: 30px;
             line-height: 40px;
-            margin-top: 2rem;
+            margin-top: 32px;
+            width: 90%;
+
+            @media screen and (max-width: 768px) {
+                font-size: 24px;
+                line-height: 36px;
+                margin-top: 24px;
+            }
         }
         span.price, a.button, p.woocommerce-products-compare-compare-button{
             display: none;
@@ -39,7 +85,23 @@
     //     }
     // }
     .slick-list{
-        padding:0 50px 0 0 !important;
+        // padding:0 50px 0 0 !important;
+        width: 100%;
+        // overflow: visible;
+    }
+    .slick-track {
+        margin: 0 -10px;
+        @media screen and (max-width: 768px) {
+            margin: 0 -6px;
+        }
+        @media screen and (min-width: 1640px) {
+            margin: 0;
+        }
+    }
+    .slick-arrow {
+        &.slick-disabled {
+            display: none !important;
+        }
     }
     .slick-prev {
         width: 63px;
@@ -47,7 +109,9 @@
         background: url('../../../trek-travel-theme/assets/images/testimonial-arrow.png') !important;
         transform: matrix(-1, 0, 0, 1, 0, 0);
         z-index: 1;
-        top: 40%;
+        scale: 0.9;
+        top: 27%;
+        left: -20px;
         &:before {
             content: unset !important;
         }
@@ -55,7 +119,10 @@
     .slick-next {
         width: 63px;
         height: 63px;
-        right: 10%;
+        right: -25px;
+        scale: 0.9;
+        top: 34%;
+        right: 72px;
         // margin-top: 3%;
         background: url('../../../trek-travel-theme/assets/images/testimonial-arrow.png') !important;
         &:before {
