Fix/header popups tripfinder (#30)
* Navigation - tablet, product price - tablet, Trip finder form, Filters - mobile, Mega menu - mobile

* Add divider to the button

* Set font-family to the body

* Add build css file

* Bugs fixing - calendar, filters

* Elementor popup - close icon color

* Fix mobile mega menu, add category image field, hamburger menu icon, fix iOS problem

* Fix hamburger bug - iOS

* Fix sub menu arrow

* Style submenu - mobile nav

* Fix mobile mega menu

* Fix mobile nav - scroll

---------

Co-authored-by: Polina Todorova <polina@grind.bg>

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -10026,6 +10026,15 @@ input[type=password]::-ms-reveal, input[type=password]::-ms-clear {
     padding: 0;
     padding-bottom: 16px;
   }
+  .mobile-nav #navbar #mega-menu-wrap-main-menu .mega-menu .custom-style-menu > .mega-sub-menu > li > ul > li > ul > li > a {
+    font-weight: bold !important;
+  }
+  .mobile-nav #navbar #mega-menu-wrap-main-menu .mega-menu .custom-style-menu > .mega-sub-menu > li > ul > li > ul > li > ul {
+    margin-left: 20px !important;
+  }
+  .mobile-nav #navbar #mega-menu-wrap-main-menu .mega-menu .custom-style-menu > .mega-sub-menu > li > ul > li > ul > li > ul > li > ul {
+    margin-left: 20px !important;
+  }
 }
 .navbar {
   --bs-navbar-padding-x: 0;
